tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::postfix_chaining::p06_complex_index_expression_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Index:
            target:
              Var: arr
            index:
              Binary:
                left:
                  Var: i
                op: Add
                right:
                  Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Index:
          target:
            Var: arr
          index:
            Binary:
              left:
                Var: i
              op: Add
              right:
                Number: 1
