tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::postfix_chaining::p07_member_after_index_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Member:
            target:
              Index:
                target:
                  Index:
                    target:
                      Var: matrix
                    index:
                      Number: 0
                index:
                  Number: 1
            field: value
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Member:
          target:
            Index:
              target:
                Index:
                  target:
                    Var: matrix
                  index:
                    Number: 0
              index:
                Number: 1
          field: value
