tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::unary::p02_parses_logical_not_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Unary:
            op: Not
            expr:
              Bool: true
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Unary:
          op: Not
          expr:
            Bool: true
