tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::unary::p03_parses_nested_unary_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Unary:
            op: Neg
            expr:
              Unary:
                op: Neg
                expr:
                  Number: 123
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Unary:
          op: Neg
          expr:
            Unary:
              op: Neg
              expr:
                Number: 123
