tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p03_nested_assignment_expression_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: a
        kind: MutableStatic
        value:
          Assign:
            left:
              Var: b
            right:
              Assign:
                left:
                  Var: c
                right:
                  Number: 5
                op: Assign
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Assign:
          left:
            Var: b
          right:
            Assign:
              left:
                Var: c
              right:
                Number: 5
              op: Assign
          op: Assign
