tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p05_index_assignment_chain_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Assign:
            left:
              Index:
                target:
                  Var: a
                index:
                  Var: i
            right:
              Assign:
                left:
                  Var: x
                right:
                  Number: 4
                op: Assign
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Assign:
          left:
            Index:
              target:
                Var: a
              index:
                Var: i
          right:
            Assign:
              left:
                Var: x
              right:
                Number: 4
              op: Assign
          op: Assign
