tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p08_test_variable_declarations_4.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: a
        kind: MutableStatic
        value:
          Number: 0
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Number: 0
