tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p09_parses_empty_function_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: foo
        params: []
        body: []
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: foo
      params: []
      body: []
