tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p12_function_and_variable_mix_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: foo
        params: []
        body: []
    - Let:
        name: x
        kind: MutableStatic
        value:
          Number: 5
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: foo
      params: []
      body: []
  - Let:
      name: x
      kind: MutableStatic
      value:
        Number: 5
