tests/snapshots/ast/r#mod__common__assertion__parser::diagnostic_recovery::declaration_statements::p13_function_body_is_independent_scope_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: foo
        params: []
        body:
          - Let:
              name: x
              kind: MutableStatic
              value:
                Number: 1
          - Let:
              name: y
              kind: MutableStatic
              value:
                Assign:
                  left:
                    Var: x
                  right:
                    Number: 2
                  op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: foo
      params: []
      body:
        - Let:
            name: x
            kind: MutableStatic
            value:
              Number: 1
        - Let:
            name: y
            kind: MutableStatic
            value:
              Assign:
                left:
                  Var: x
                right:
                  Number: 2
                op: Assign
