tests/snapshots/ast/r#mod__common__assertion__parser::expression_precedence::precedence::p01_mul_higher_than_add_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Number: 1
            op: Add
            right:
              Binary:
                left:
                  Number: 2
                op: Mul
                right:
                  Number: 3
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Number: 1
          op: Add
          right:
            Binary:
              left:
                Number: 2
              op: Mul
              right:
                Number: 3
